[package]
name = "rmbg-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
ort = { version = "2.0.0-rc.8", features = ["download-binaries"] }
image = "0.25.0"
anyhow = "1.0.81"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
bytes = "1.0"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
pretty_env_logger = "0.5"
log = "0.4"
base64 = "0.21.5"
once_cell = "1.19.0"
ndarray = "0.16.1"
fast_image_resize = "5.0.0"